# test-playground

./: docker-compose.yaml  pyproject.toml
polls/: admin.py  models.py  tests.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
polls/templates/polls/: detail.html
templates/admin/: base_site.html
test_project/: settings.py  urls.py
