[project]
name = "test-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.9",
    "psycopg[binary]>=3.3.1",
    "pytest-django>=4.11.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
    "ruff>=0.14.8",
]
prod = [
    "gunicorn>=23.0.0",
]

